[tool.poetry]
name = "rubix-lora"
version = "1.2.4"
description = "Rubix Lora interface"
authors = ["NubeIO"]

[tool.poetry.dependencies]
python = "^3.6"
Flask = "^1.1.2"
Flask-RESTful = "^0.3.8"
Flask-Cors = "^3.0.9"
Flask-SQLAlchemy = "^2.4.4"
SQLAlchemy = "^1.3.19"
gunicorn = "^20.0.4"
gevent = [
    { version = "20.12.1", markers = "platform_machine == 'x86_64'" },
    { git = "https://github.com/gevent/gevent.git", tag = "20.12.1", markers = "platform_machine != 'x86_64'" }
]
pyserial = "^3.5"
paho-mqtt = "^1.5.1"
click = "^7.1.2"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pyinstaller = "^4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
