[tool.poetry]
name = "rubix-lora"
version = "1.3.5"
description = "Rubix Lora interface"
authors = ["NubeIO"]

[tool.poetry.dependencies]
python = "^3.6"
gunicorn = "^20.0.4"
gevent = [
    { version = "20.12.1", markers = "platform_machine == 'x86_64'" },
    { git = "https://github.com/gevent/gevent.git", tag = "20.12.1", markers = "platform_machine != 'x86_64'" }
]
pyserial = "^3.5"
click = "^7.1.2"
toml = "^0.10.2"
mqtt-rest-bridge = {git = "https://github.com/NubeIO/mqtt-rest-bridge", rev = "v1.1.3"}
rubix-http = {git = "https://github.com/NubeIO/rubix-http", rev = "v1.0.1"}
rubix-registry = {git = "https://github.com/NubeIO/rubix-registry", rev = "v1.0.0"}

[tool.poetry.dev-dependencies]
pyinstaller = "^4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
